--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "styled-components": "^6.1.11",
@@ -49,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
