--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,8 @@
 [dev]
   port = 3000
   functions = "netlify/functions"
-
+  publish = "frontend/build" 
+  command = "npm run dev"  
+  
 [context.production.environment]
   NODE_ENV = "production"
