--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Host backend app on Digital Ocean ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:frontend": "npm run start --prefix frontend", 
+    "start:backend": "nodemon backend/index.js",        
+    "dev": "concurrently \"npm run start:frontend\" \"npm run start:backend\"", 
+    "build": "npm run build --prefix frontend",           
+    "deploy": "netlify deploy --prod"                     
   },
   "keywords": [
     "backend",
@@ -13,6 +18,11 @@
   "author": "Ivan Tan",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9"
+  },
+  "devDependencies": {
+    "concurrently": "^6.0.0",
+    "nodemon": "^2.0.7"
   }
 }
